Remove unused navigation items and update styles for consistency

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,11 @@ body {
   background-repeat: no-repeat;
 }
 
+.nav-link{
+  margin-right: 170px;
+  margin-top: 10px;
+}
+
 .layout_padding {
   padding: 75px 0;
 }
